#1180 Calculate total number of entries and total size of a folder's tree